[gd_scene load_steps=14 format=3 uid="uid://eaxa328e6pg4"]

[ext_resource type="Script" path="res://scripts/register_menu.gd" id="1_r8ci7"]
[ext_resource type="Texture2D" uid="uid://0sfy2gs22wmh" path="res://FknQrN.png" id="2_rs8ge"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="3_ayagu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n02rp"]
texture = ExtResource("2_rs8ge")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4usve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fh0p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_olenp"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w3uf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek3ce"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p722q"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vup7m"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kwah"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy6sg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Register Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8ci7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_n02rp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -44.0
offset_right = 210.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Vardas"

[node name="NickInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Prisijungimo vardas"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "El. Paštas"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Slaptažodis"
caret_blink_interval = 3.55
secret = true

[node name="RepPasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Pakartokite slaptažodį"
caret_blink_interval = 3.55
secret = true

[node name="Register Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_4usve")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_4fh0p")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_olenp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_2w3uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ek3ce")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_p722q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vup7m")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4kwah")
theme_override_styles/normal = SubResource("StyleBoxFlat_sy6sg")
text = "Registruotis
"

[node name="Back Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_4usve")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_4fh0p")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_olenp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_2w3uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ek3ce")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_p722q")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vup7m")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4kwah")
theme_override_styles/normal = SubResource("StyleBoxFlat_sy6sg")
text = "Atgal"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -247.0
offset_right = 233.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_ayagu")
theme_override_font_sizes/font_size = 60
text = "CogniGame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Register Button" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
